--- a/tcn/ui/templates/tcn/articles/following.html
+++ b/tcn/ui/templates/tcn/articles/following.html
@@ -1,4 +1,4 @@
-{% extends 'tcn/articles/list.html' %}{% load i18n %}
+{% extends 'tcn/articles/saved.html' %}{% load i18n %}
 
 <!---->
 {% block title %}{{ block.super }} | {% trans 'Following' %}{% endblock %}
