--- a/tcn/ui/templates/tcn/articles/id.html
+++ b/tcn/ui/templates/tcn/articles/id.html
@@ -209,7 +209,7 @@
       </div>
     </div>
 
-    <figure class="skeleton overflow-clip">
+    <figure class="rounded-box overflow-clip">
       {% image article.image fill-1920x1080 %}
     </figure>
 
