--- a/tcn/ui/templates/tcn/components/article-2.html
+++ b/tcn/ui/templates/tcn/components/article-2.html
@@ -4,7 +4,7 @@
   class="col-span-12 row-span-12 lg:first:col-span-3 lg:nth-[3]:col-span-3 lg:nth-[2]:col-span-6 lg:nth-[2]:row-span-6 xl:nth-[2]:col-span-6 xl:nth-[2]:row-span-4 md:col-span-6 md:row-span-6 lg:col-span-4 lg:row-span-4 2xl:col-span-3 2xl:row-span-3"
 >
   <article
-    class="relative card bg-base-300 size-full shadow-sm hover:bg-base-200 card-sm md:card-md xl:card-lg 2xl:card-xl"
+    class="relative card bg-base-100 size-full border border-base-300 hover:bg-base-200 card-sm md:card-md xl:card-lg 2xl:card-xl"
   >
     <a
       href="{% url 'tcn:redirect' article.link.slug %}"
@@ -13,7 +13,7 @@
       <span class="sr-only">{% trans 'Read' %}</span>
     </a>
 
-    <figure class="skeleton overflow-clip">
+    <figure class="rounded-box overflow-clip">
       {% image article.image fill-1920x1080 %}
     </figure>
 
