--- a/tcn/ui/templates/tcn/components/article-li.html
+++ b/tcn/ui/templates/tcn/components/article-li.html
@@ -1,22 +1,20 @@
 {% load i18n wagtailcore_tags wagtailimages_tags %}
 
 <li
-  class="list-row relative items-center border border-base-300 hover:bg-base-200"
+  class="list-row p-2 items-center border border-base-300 hover:bg-base-200 lg:p-4"
 >
   <a href="{% pageurl article %}" class="absolute inset-0 z-10">
     <span class="sr-only">{% trans 'Read' %}</span>
   </a>
   <div>
-    <figure class="rounded-box overflow-clip size-32">
+    <figure class="rounded-box size-16 overflow-clip sm:size-24 lg:size-32">
       {% image article.image fill-1080x1080 %}
     </figure>
   </div>
-  <div>
+  <div class="flex flex-col gap-1 md:gap-2 lg:gap-4">
     <h2 class="text-xl text-primary font-bold lg:text-2xl">
       {{ article.title }}
     </h2>
-    <p>{{ article.headline }}</p>
+    <p class="hidden md:block">{{ article.headline }}</p>
   </div>
-
-  <i data-lucide="chevron-right" class="size-8 rtl:rotate-180"></i>
 </li>
