--- a/tcn/ui/templates/tcn/index.html
+++ b/tcn/ui/templates/tcn/index.html
@@ -68,7 +68,7 @@
     </div>
   </section>
 
-  <section>
+  <section title="{% trans 'Trending' %}">
     {% if trending_news %}
     <div class="container-prose">
       <h1>{% trans 'Trending now' %}</h1>
@@ -84,7 +84,7 @@
     {% endif %}
   </section>
 
-  <section>
+  <section title="{% trans 'Latest news' %}">
     {% if latest_news %}
     <div class="container-prose">
       <h1>{% trans 'Latest News' %}</h1>
