--- a/tcn/ui/templates/registration/base.html
+++ b/tcn/ui/templates/registration/base.html
@@ -4,111 +4,352 @@
 {% block title %}{{ block.super }} | {% trans 'Profile' %}{% endblock %}
 
 <!---->
-{% block container %}
-<div class="drawer drawer-end">
-  <input id="profile-drawer" type="checkbox" class="drawer-toggle sr-only" />
+{% block navbar %}{% endblock %}
 
-  <div class="drawer-content size-full overflow-y-auto">
-    <div class="relative container py-24 px-4 mx-auto">
-      <main class="flex flex-col gap-4 lg:gap-6">
-        <nav class="flex items-center gap-4">
-          <div
-            class="tooltip tooltip-right tooltip-primary rtl:tooltip-left"
-            data-tip="{% trans 'Open drawer' %}"
-          >
-            <label
-              for="profile-drawer"
-              aria-label="{% trans 'Open drawer' %}"
-              class="btn btn-sm btn-square btn-soft btn-primary lg:btn-md"
+<!---->
+{% block main %}
+<div class="drawer md:drawer-open">
+  <input id="profile-drawer" type="checkbox" class="drawer-toggle" />
+
+  <div class="drawer-content size-full">
+    <div class="relative size-full">
+      <header class="absolute inset-x-0 top-0 z-40 backdrop-blur-3xl">
+        <nav class="navbar p-4">
+          <div class="navbar-start gap-4">
+            <div
+              class="tooltip tooltip-right rtl:tooltip-left tooltip-primary z-10 md:hidden"
+              data-tip="{% trans 'Open drawer' %}"
             >
-              <i data-lucide="menu" class="size-4 lg:size-6"></i>
-              <span class="sr-only">{% trans 'Open drawer' %}</span>
-            </label>
+              <label
+                for="profile-drawer"
+                aria-label="{% trans 'close sidebar' %}"
+                class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
+              >
+                <i data-lucide="menu" class="size-4 lg:size-6"></i>
+                <span class="sr-only">{% trans 'Open drawer' %}</span>
+              </label>
+            </div>
+
+            <div
+              class="tooltip tooltip-right rtl:tooltip-left tooltip-primary md:hidden"
+              data-tip="{% trans 'The Certain News' %}"
+            >
+              <h1 class="relative">
+                <a
+                  href="{% pageurl home %}"
+                  class="btn btn-square btn-primary lg:btn-lg"
+                >
+                  <div
+                    class="btn btn-square btn-primary rotate-45 p-0 shadow-none lg:btn-lg"
+                  >
+                    <i
+                      data-lucide="scroll-text"
+                      class="-rotate-45 lg:size-8 2xl:size-10"
+                    ></i>
+                  </div>
+                  <span class="sr-only">{% trans 'The Certain News' %}</span>
+                </a>
+              </h1>
+            </div>
           </div>
-          <div class="breadcrumbs p-0">
-            <ol>
-              <li>
-                <a href="{% url 'tcn:profile' %}">{% trans 'Profile' %}</a>
-              </li>
-              {% block breadcrumbs %}{% endblock %}
-            </ol>
+
+          <div class="navbar-end gap-4">
+            <div
+              class="tooltip tooltip-left rtl:tooltip-right tooltip-primary lg:hidden"
+              data-tip="{% trans 'Search' %}"
+            >
+              <a
+                href="{% url 'tcn:search' %}"
+                class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
+              >
+                <i data-lucide="search" class="size-4 lg:size-6"></i>
+                <span class="sr-only">{% trans 'Search' %}</span>
+              </a>
+            </div>
+
+            <form
+              method="get"
+              action="{% url 'tcn:search' %}"
+              class="hidden lg:block"
+            >
+              <label
+                class="mx-auto max-w-xl w-full bg-transparent input input-ghost input-primary 2xl:input-lg"
+              >
+                <i
+                  data-lucide="search"
+                  class="size-4 text-primary lg:size-6"
+                ></i>
+                <input
+                  required
+                  type="search"
+                  name="search"
+                  class="grow placeholder-primary"
+                  placeholder="{% trans 'Search' %}"
+                />
+              </label>
+            </form>
+
+            <div
+              class="tooltip tooltip-left rtl:tooltip-right tooltip-primary"
+              data-tip="{% translate 'Language' %}"
+            >
+              <button
+                popovertarget="language"
+                style="anchor-name: --language"
+                class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
+              >
+                <i data-lucide="languages" class="size-4 lg:size-6"></i>
+
+                <span class="sr-only"> {% translate 'Language' %} </span>
+              </button>
+
+              <form
+                id="lang-form"
+                class="hidden"
+                action="{% url 'set_language' %}"
+                method="post"
+              >
+                {% csrf_token %}
+                <input name="next" type="hidden" value="{{ redirect_to }}" />
+              </form>
+
+              <ul
+                popover
+                id="language"
+                style="position-anchor: --language"
+                class="menu dropdown dropdown-bottom bg-base-100/75 dark:bg-base-100/50 dropdown-left rounded-box backdrop-blur-3xl shadow-xl rtl:dropdown-right"
+              >
+                <li class="menu-title">{% translate 'Language' %}</li>
+
+                {% for language_code, language_name in LANGUAGES %}
+                <!---->
+                {% get_language_info for language_code as lang %}
+                <li
+                  class="tooltip tooltip-primary"
+                  data-tip="{{ lang.name_translated }}"
+                >
+                  <label
+                    class="flex flex-row items-center justify-between gap-6"
+                  >
+                    <div class="flex flex-row items-center gap-2">
+                      <input
+                        type="submit"
+                        class="hidden"
+                        name="language"
+                        form="lang-form"
+                        value="{{ language_code }}"
+                        aria-label="{{ lang.name_local }} ({{ lang.code }})"
+                      />
+                      <span>
+                        {{ language_name }} - ({{ lang.name_local }})
+                      </span>
+                    </div>
+                    {% if language_code == LANGUAGE_CODE %}
+                    <i data-lucide="check" class="size-4 lg:size-6"></i>
+                    {% endif %}
+                  </label>
+                </li>
+                {% endfor %}
+              </ul>
+            </div>
           </div>
         </nav>
-
-        {% block main_content %}{% endblock %}
-      </main>
+      </header>
+      <div
+        class="size-full overflow-y-auto max-h-dvh md:max-h-[calc(100dvh-0.5rem)] lg:max-h-[calc(100dvh-1rem)]"
+      >
+        <main class="container grid gap-8 py-24 px-4 mx-auto">
+          {% block main_content %}{% endblock %}
+        </main>
+      </div>
     </div>
   </div>
 
-  <div class="drawer-side z-50">
+  <div
+    class="drawer-side z-50 is-drawer-close:overflow-visible md:max-h-[calc(100dvh-0.5rem)] lg:max-h-[calc(100dvh-1rem)]"
+  >
     <label
       for="profile-drawer"
-      aria-label="{% trans 'Close drawer' %}"
+      aria-label="close sidebar"
       class="drawer-overlay"
     ></label>
 
     <section
-      class="min-w-sm bg-base-100/75 dark:bg-base-100/50 flex size-full flex-col overflow-hidden overflow-y-auto backdrop-blur-3xl sm:w-10/12 md:w-8/12 lg:w-1/3 2xl:w-1/4"
+      class="is-drawer-close:w-20 is-drawer-open:w-full md:is-drawer-open:w-md bg-base-200/75 dark:bg-base-200/50 flex h-full flex-col items-center gap-4 p-4 backdrop-blur-3xl md:max-h-[calc(100dvh-0.5rem)] lg:max-h-[calc(100dvh-1rem)]"
     >
-      <header class="flex items-center justify-between gap-4 p-4">
-        <div
-          class="tooltip tooltip-right rtl:tooltip-left tooltip-primary tooltip-open"
-          data-tip="{% trans 'Profile' %}"
-        >
-          <h1 class="relative">
-            <a
-              href="{% pageurl home %}"
-              class="btn btn-square btn-primary lg:btn-lg"
+      <div class="flex w-full items-center justify-between gap-4">
+        <div class="flex items-center gap-4">
+          <div
+            class="tooltip tooltip-right rtl:tooltip-left tooltip-primary is-drawer-close:hidden"
+            data-tip="{% trans 'Open drawer' %}"
+          >
+            <label
+              for="nav-drawer"
+              aria-label="{% trans 'close sidebar' %}"
+              class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
             >
-              <div
-                class="btn btn-square btn-primary rotate-45 p-0 shadow-none lg:btn-lg"
+              <i data-lucide="menu" class="size-4 lg:size-6"></i>
+              <span class="sr-only"> {% trans 'Open drawer' %} </span>
+            </label>
+          </div>
+
+          <div
+            class="tooltip tooltip-right rtl:tooltip-left tooltip-primary"
+            data-tip="{% trans 'Profile' %}"
+          >
+            <h1 class="relative">
+              <a
+                href="{% pageurl home %}"
+                class="btn btn-square btn-primary lg:btn-lg"
               >
-                <i
-                  data-lucide="scroll-text"
-                  class="-rotate-45 lg:size-8 2xl:size-10"
-                ></i>
-              </div>
-              <span class="sr-only">{% trans 'The Certain News' %}</span>
-            </a>
-          </h1>
+                <div
+                  class="btn btn-square btn-primary rotate-45 p-0 shadow-none lg:btn-lg"
+                >
+                  <i
+                    data-lucide="scroll-text"
+                    class="-rotate-45 lg:size-8 2xl:size-10"
+                  ></i>
+                </div>
+                <span class="sr-only">{% trans 'Profile' %}</span>
+              </a>
+            </h1>
+          </div>
         </div>
 
-        <div class="flex items-center gap-2 lg:gap-4">
+        <div class="is-drawer-close:hidden flex items-center gap-4">
           <div
-            class="tooltip tooltip-left rtl:tooltip-right"
+            class="tooltip tooltip-left tooltip-error rtl:tooltip-right"
+            data-tip="{% trans 'Breaking' %}"
+          >
+            <a
+              href="{% url 'tcn:articles' %}?is_breaking=True"
+              class="btn btn-square btn-sm btn-error animate-pulse md:btn-md 2xl:btn-lg"
+            >
+              <i data-lucide="alert-circle" class="size-4 lg:size-6"></i>
+              <span class="sr-only">{% trans 'Breaking' %}</span>
+            </a>
+          </div>
+
+          <div
+            class="tooltip tooltip-left tooltip-primary rtl:tooltip-right"
+            data-tip="{% trans 'Latest news' %}"
+          >
+            <a
+              href="{% url 'tcn:articles' %}"
+              class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
+            >
+              <i data-lucide="clock-fading" class="size-4 lg:size-6"></i>
+              <span class="sr-only">{% trans 'Latest news' %}</span>
+            </a>
+          </div>
+
+          <div
+            class="tooltip tooltip-left rtl:tooltip-right md:hidden"
             data-tip="{% trans 'Close' %}"
           >
             <label
               for="profile-drawer"
-              aria-label="{% trans 'close sidebar' %}"
-              class="btn btn-square btn-sm btn-ghost md:btn-md 2xl:btn-lg"
+              class="btn btn-square btn-ghost btn-sm md:btn-md 2xl:btn-lg"
             >
               <i data-lucide="x" class="size-4 lg:size-6"></i>
               <span class="sr-only">{% trans 'Close' %}</span>
             </label>
           </div>
         </div>
-      </header>
+      </div>
 
-      <ul class="menu menu-vertical w-full">
-        <li>
+      <ul class="menu w-full p-0 grow gap-2">
+        <li
+          class="is-drawer-close:tooltip is-drawer-close:tooltip-primary is-drawer-close:tooltip-right rtl:is-drawer-close:tooltip-left"
+          data-tip="{% trans 'Home' %}"
+        >
+          <a href="{% pageurl home %}">
+            <i data-lucide="home" class="size-4 lg:size-6"></i>
+            <span class="is-drawer-close:sr-only">{% trans 'Home' %}</span>
+          </a>
+        </li>
+
+        <li
+          class="is-drawer-close:tooltip is-drawer-close:tooltip-primary is-drawer-close:tooltip-right rtl:is-drawer-close:tooltip-left"
+          data-tip="{% trans 'Profile' %}"
+        >
           <a href="{% url 'tcn:profile' %}">
             <i data-lucide="user" class="size-4 lg:size-6"></i>
-            <span>{% trans 'Profile' %}</span>
+            <span class="is-drawer-close:sr-only">{% trans 'Profile' %}</span>
           </a>
         </li>
-        <li>
-          <a href="{% url 'tcn:saved-articles' %}">
-            <i data-lucide="bookmark-check" class="size-4 lg:size-6"></i>
-            <span>{% trans 'Saved articles' %}</span>
-          </a>
+
+        <li
+          class="is-drawer-open:hidden is-drawer-close:tooltip is-drawer-close:tooltip-primary is-drawer-close:tooltip-right rtl:is-drawer-close:tooltip-left"
+          data-tip="{% trans 'Account' %}"
+        >
+          <button popovertarget="account" style="anchor-name: --account">
+            <i data-lucide="user-circle" class="size-4 lg:size-6"></i>
+
+            <span class="sr-only">{% translate 'Account' %}</span>
+          </button>
+
+          <ul
+            popover
+            id="account"
+            style="position-anchor: --account"
+            class="menu dropdown dropdown-bottom dropdown-right bg-base-100 rounded-box shadow-xl rtl:dropdown-left"
+          >
+            <li>
+              <a href="{% url 'tcn:u-user' request.user.slug %}">
+                <i data-lucide="user-pen" class="size-4 lg:size-6"></i>
+                <span>{% trans 'Edit account' %}</span>
+              </a>
+            </li>
+            <li>
+              <a href="{% url 'tcn:d-user' request.user.slug %}">
+                <i data-lucide="user-x" class="size-4 lg:size-6"></i>
+                <span>{% trans 'Delete account' %}</span>
+              </a>
+            </li>
+            <li>
+              <details>
+                <summary>
+                  <i data-lucide="lock-keyhole" class="size-4 lg:size-6"></i>
+                  {% trans 'Password' %}
+                </summary>
+                <ul>
+                  <li>
+                    <a href="{% url 'tcn:password_change' %}">
+                      <i
+                        data-lucide="rotate-ccw-key"
+                        class="size-4 lg:size-6"
+                      ></i>
+                      <span>{% trans 'Change Password' %}</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="{% url 'tcn:password_reset' %}">
+                      <i
+                        data-lucide="rectangle-ellipsis"
+                        class="size-4 lg:size-6"
+                      ></i>
+                      <span>{% trans 'Reset Password' %}</span>
+                    </a>
+                  </li>
+                </ul>
+              </details>
+            </li>
+          </ul>
         </li>
-        <li>
+
+        <li
+          class="is-drawer-close:hidden is-drawer-open:flex"
+          data-tip="{% trans 'Account' %}"
+        >
           <details>
             <summary>
               <i data-lucide="user-circle" class="size-4 lg:size-6"></i>
-              {% trans 'Account' %}
+              <span class="is-drawer-close:sr-only"
+                >{% translate 'Account' %}</span
+              >
             </summary>
+
             <ul>
               <li>
                 <a href="{% url 'tcn:u-user' request.user.slug %}">
@@ -153,17 +394,58 @@
             </ul>
           </details>
         </li>
-        <li>
-          <a href="{% url 'tcn:authors' %}">
-            <i data-lucide="users" class="size-4 lg:size-6"></i>
-            <span>{% trans 'Following' %}</span>
+
+        <li
+          class="is-drawer-close:tooltip is-drawer-close:tooltip-primary is-drawer-close:tooltip-right rtl:is-drawer-close:tooltip-left"
+          data-tip="{% trans 'Saved articles' %}"
+        >
+          <a href="{% url 'tcn:saved-articles' %}">
+            <i data-lucide="bookmark-check" class="size-4 lg:size-6"></i>
+            <span class="is-drawer-close:sr-only">
+              {% trans 'Saved articles' %}
+            </span>
           </a>
         </li>
-        <li>
+
+        <li
+          class="is-drawer-close:tooltip is-drawer-close:tooltip-primary is-drawer-close:tooltip-right rtl:is-drawer-close:tooltip-left"
+          data-tip="{% trans 'Following' %}"
+        >
+          <a href="{% url 'tcn:following' %}">
+            <i data-lucide="users" class="size-4 lg:size-6"></i>
+            <span class="is-drawer-close:sr-only">
+              {% trans 'Following' %}
+            </span>
+          </a>
+        </li>
+      </ul>
+
+      <ul class="menu w-full p-0 gap-2">
+        <li
+          class="is-drawer-close:tooltip is-drawer-close:tooltip-primary is-drawer-close:tooltip-right rtl:is-drawer-close:tooltip-left"
+          data-tip="{% trans 'Log out' %}"
+        >
           <button type="submit" form="logout">
             <i data-lucide="log-out" class="size-4 lg:size-6"></i>
-            <span>{% trans 'Log out' %}</span>
+            <span class="is-drawer-close:sr-only">{% trans 'Log out' %}</span>
           </button>
+        </li>
+
+        <li
+          class="is-drawer-close:tooltip is-drawer-close:tooltip-primary is-drawer-close:tooltip-right rtl:is-drawer-close:tooltip-left"
+          data-tip="{% trans 'Open drawer' %}"
+        >
+          <label for="profile-drawer" class="drawer-button">
+            <i
+              data-lucide="sidebar"
+              class="is-drawer-open:hidden size-4 lg:size-6"
+            ></i>
+            <i
+              data-lucide="sidebar-close"
+              class="is-drawer-close:hidden size-4 lg:size-6"
+            ></i>
+            <span class="is-drawer-close:sr-only">{% trans 'Close' %}</span>
+          </label>
         </li>
       </ul>
     </section>
