--- a/tcn/ui/templates/tcn/articles/list.html
+++ b/tcn/ui/templates/tcn/articles/list.html
@@ -77,16 +77,11 @@
   {% include 'tcn/components/article-1.html' %}
   <!---->
   {% empty %}
-  <li class="col-span-12">
-    <article
-      class="card card-sm bg-base-200 shadow-xs lg:card-md xl:card-lg 2xl:card-xl overflow-hidden"
-    >
-      <main class="card-body items-center">
-        <i data-lucide="info" class="mx-auto size-1/4 text-primary"></i>
-        <h2 class="card-title text-primary">{% trans 'No articles' %}</h2>
-        <p>{% trans 'Published news articles will appear here' %}</p>
-      </main>
-    </article>
+  <li class="col-span-full">
+    <div class="container-prose">
+      <h2>{% trans 'No results' %}</h2>
+      <p>{% trans "We couldn't find any results." %}</p>
+    </div>
   </li>
   {% endfor %}
 </ol>
@@ -114,7 +109,8 @@
     </header>
 
     <main>
-      {% include 'tcn/components/form.html' with method='get' csrf=False form=filter.form %}
+      {% include 'tcn/components/form.html' with method='get' csrf=False
+      form=filter.form %}
     </main>
   </section>
 </dialog>
