--- a/tcn/ui/templates/tcn/articles/saved.html
+++ b/tcn/ui/templates/tcn/articles/saved.html
@@ -1,11 +1,98 @@
-{% extends 'tcn/articles/list.html' %}{% load i18n %}
+{% extends 'registration/base.html' %}{% load i18n %}
 
 <!---->
-{% block title %}{{ block.super }} | {% trans 'Saved' %}{% endblock %}
+{% block title %}{{ block.super }} | {% trans 'Saved articles' %}{% endblock %}
 
 <!---->
-{% block page_title %}
+{% block main_content %}
 <div class="container-prose">
-  <h1>{% trans 'Saved' %}</h1>
+  {% block page_title %}
+  <h1>{% trans 'Saved articles' %}</h1>
+  {% endblock %}
 </div>
+
+<div class="flex gap-4 items-center justify-end">
+  <div
+    data-tip="{% trans 'Saved' %}"
+    class="tooltip tooltip-left rtl:tooltip-right tooltip-primary"
+  >
+    <a
+      href="{% url 'tcn:saved-articles' %}"
+      class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
+    >
+      <i data-lucide="bookmark-check" class="size-4 lg:size-6"></i>
+      <span class="sr-only">{% trans 'Saved' %}</span>
+    </a>
+  </div>
+
+  <div
+    data-tip="{% trans 'Following' %}"
+    class="tooltip tooltip-left rtl:tooltip-right tooltip-primary"
+  >
+    <a
+      href="{% url 'tcn:following-articles' %}"
+      class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
+    >
+      <i data-lucide="users" class="size-4 lg:size-6"></i>
+      <span class="sr-only">{% trans 'Following' %}</span>
+    </a>
+  </div>
+
+  <div
+    data-tip="{% trans 'Filters' %}"
+    class="tooltip tooltip-left rtl:tooltip-right tooltip-primary"
+  >
+    <button
+      onclick="filters.showModal()"
+      class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
+    >
+      <i data-lucide="list-filter" class="size-4 lg:size-6"></i>
+      <span class="sr-only">{% trans 'Filters' %}</span>
+    </button>
+  </div>
+</div>
+
+<ol class="grid grid-cols-12 grid-rows-[auto] gap-4">
+  {% for article in articles %}
+  <!---->
+  {% include 'tcn/components/article.html' %}
+  <!---->
+  {% empty %}
+  <li class="col-span-full">
+    <div class="container-prose">
+      <h2>{% trans 'No results' %}</h2>
+      <p>{% trans "We couldn't find any results." %}</p>
+    </div>
+  </li>
+  {% endfor %}
+</ol>
+
+{% include 'tcn/components/pagination.html' %}
+
+<dialog id="filters" class="modal">
+  <section class="relative modal-box grid max-w-xl gap-6 bg-base-200">
+    <header class="flex items-center justify-between gap-4 text-primary">
+      <h1 class="text-lg font-semibold lg:text-2xl">{% trans 'Filters' %}</h1>
+
+      <div
+        class="tooltip tooltip-left rtl:tooltip-right"
+        data-tip="{% trans 'Close' %}"
+      >
+        <button
+          onclick="filters.close()"
+          class="btn btn-square btn-sm btn-ghost md:btn-md 2xl:btn-lg"
+        >
+          <i data-lucide="x" class="size-4 lg:size-6"></i>
+
+          <span class="sr-only">{% trans 'Close' %}</span>
+        </button>
+      </div>
+    </header>
+
+    <main>
+      {% include 'tcn/components/form.html' with method='get' csrf=False
+      form=filter.form %}
+    </main>
+  </section>
+</dialog>
 {% endblock %}
