--- a/tcn/ui/templates/tcn/authors/id.html
+++ b/tcn/ui/templates/tcn/authors/id.html
@@ -6,127 +6,97 @@ user.get_full_name }}{% endblock %}
 
 <!---->
 {% block content %}
-<nav class="breadcrumbs text-primary text-xs lg:text-sm">
-  <ol>
-    <li>
-      <a href="{% pageurl home %}">{% trans 'Home' %}</a>
-    </li>
-    <li>
-      <a href="{% url 'tcn:authors' %}">{% trans 'Authors' %}</a>
-    </li>
-    <li>{{ user.get_full_name }}</li>
-  </ol>
-</nav>
-
 <section class="grid gap-8">
-  <section class="flex flex-col items-center justify-center gap-4">
-    <figure>
-      {% if user.photo %}
-      <div class="avatar">
-        <div class="mask mask-squircle size-32 lg:size-56">
-          <img src="{{ user.photo.url }}" alt="{{ user }}" />
-        </div>
-      </div>
-      {% else %}
-      <div class="avatar avatar-placeholder">
-        <div
-          class="mask mask-squircle flex items-center justify-center bg-primary text-primary-content size-32 lg:size-56"
-        >
-          <span class="text-5xl uppercase font-bold lg:text-7xl">
-            {{ user.first_name|slice:':1' }}
-          </span>
-        </div>
-      </div>
-      {% endif %}
+  <div class="container-prose">
+    {% if user.photo %}
+    <figure class="size-32 rounded-full mx-auto overflow-hidden lg:size-44">
+      <img class="w-full" src="{{ user.photo.url }}" alt="{{ user }}" />
     </figure>
+    {% else %}
+    <div
+      class="size-32 rounded-box mx-auto mb-8 bg-primary text-primary-content overflow-hidden lg:size-44"
+    >
+      <i data-lucide="user" class="size-full"></i>
+    </div>
+    {% endif %}
 
-    <div class="container-prose">
-      <h1>{{ user.get_full_name }}</h1>
-      <p>{{ user.bio }}</p>
+    <h1 class="text-center">{% firstof user.get_full_name user.username %}</h1>
+    <p class="lead text-center">{{ user.bio|default_if_none:"" }}</p>
+  </div>
+
+  <div class="flex items-center justify-center gap-4">
+    <div class="tooltip tooltip-success" data-tip="{% trans 'Articles' %}">
+      <span class="btn btn-soft btn-sm btn-success md:btn-md 2xl:btn-lg">
+        <i data-lucide="notebook-pen" class="size-4 lg:size-6"></i>
+        {{ user.article_count }}
+      </span>
     </div>
 
-    <div class="flex items-center gap-4">
-      <div class="tooltip tooltip-success" data-tip="{% trans 'Articles' %}">
-        <span class="btn btn-soft btn-sm btn-success md:btn-md 2xl:btn-lg">
-          <i data-lucide="notebook-pen" class="size-4 lg:size-6"></i>
-          {{ user.article_count }}
-        </span>
-      </div>
-
-      <div class="tooltip tooltip-info" data-tip="{% trans 'Date joined' %}">
-        <time
-          datetime="{{ user.date_joined }}"
-          class="badge badge-soft badge-sm badge-info md:badge-md xl:badge-lg 2xl:badge-xl"
-        >
-          <i data-lucide="calendar-clock" class="size-4 lg:size-6"></i>
-          {{ user.date_joined|date }}
-        </time>
-      </div>
-
-      {% if request.user.is_authenticated %}
-      <!---->
-      {% if user in request.user.following.all %}
-      <div
-        class="tooltip tooltip-primary"
-        data-tip="{% translate 'Following' %}"
+    <div class="tooltip tooltip-info" data-tip="{% trans 'Date joined' %}">
+      <time
+        datetime="{{ user.date_joined }}"
+        class="btn btn-soft btn-sm btn-info md:btn-md 2xl:btn-lg"
       >
-        <button
-          onclick="follow('{{ user.slug }}')"
-          class="btn btn-sm btn-primary md:btn-md 2xl:btn-lg"
-        >
-          <i data-lucide="user-check" class="size-4 lg:size-6"></i>
-          <span>{% translate 'Following' %}</span>
-        </button>
-      </div>
-      {% else %}
-      <div class="tooltip tooltip-primary" data-tip="{% translate 'Follow' %}">
-        <button
-          onclick="follow('{{ user.slug }}')"
-          class="btn btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
-        >
-          <i data-lucide="user-plus" class="size-4 lg:size-6"></i>
-          <span>{% translate 'Follow' %}</span>
-        </button>
-      </div>
-      {% endif %}
-      <!---->
-      {% else %}
-      <div
-        class="tooltip tooltip-primary"
-        data-tip="{% translate 'Login to follow' %}"
-      >
-        <a
-          href="{% url 'tcn:login' %}?next={% url 'tcn:author' user.slug %}"
-          class="btn btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
-        >
-          <i data-lucide="user-plus" class="size-4 lg:size-6"></i>
-          <span>{% translate 'Follow' %}</span>
-        </a>
-      </div>
-      {% endif %}
+        <i data-lucide="calendar-clock" class="size-4 lg:size-6"></i>
+        {{ user.date_joined|date }}
+      </time>
     </div>
-  </section>
+
+    {% if request.user.is_authenticated %}
+    <!---->
+    {% if user in request.user.following.all %}
+    <div class="tooltip tooltip-primary" data-tip="{% translate 'Following' %}">
+      <button
+        onclick="follow('{{ user.slug }}')"
+        class="btn btn-sm btn-primary md:btn-md 2xl:btn-lg"
+      >
+        <i data-lucide="user-check" class="size-4 lg:size-6"></i>
+        <span>{% translate 'Following' %}</span>
+      </button>
+    </div>
+    {% else %}
+    <div class="tooltip tooltip-primary" data-tip="{% translate 'Follow' %}">
+      <button
+        onclick="follow('{{ user.slug }}')"
+        class="btn btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
+      >
+        <i data-lucide="user-plus" class="size-4 lg:size-6"></i>
+        <span>{% translate 'Follow' %}</span>
+      </button>
+    </div>
+    {% endif %}
+    <!---->
+    {% else %}
+    <div
+      class="tooltip tooltip-primary"
+      data-tip="{% translate 'Login to follow' %}"
+    >
+      <a
+        href="{% url 'tcn:login' %}?next={% url 'tcn:author' user.slug %}"
+        class="btn btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
+      >
+        <i data-lucide="user-plus" class="size-4 lg:size-6"></i>
+        <span>{% translate 'Follow' %}</span>
+      </a>
+    </div>
+    {% endif %}
+  </div>
 
   <div class="container-prose">
     <h2>{% trans 'Articles' %}</h2>
   </div>
 
-  <ol class="grid gap-4 grid-cols-12">
+  <ol class="list grid grid-cols-1 lg:grid-cols-2 gap-4">
     {% for article in articles %}
     <!---->
-    {% include 'tcn/components/article.html' %}
+    {% include 'tcn/components/article-li.html' %}
     <!---->
     {% empty %}
-    <li class="col-span-12">
-      <article
-        class="card card-sm bg-base-200 shadow-xs lg:card-md xl:card-lg 2xl:card-xl overflow-hidden"
-      >
-        <main class="card-body items-center">
-          <i data-lucide="info" class="mx-auto size-1/4 text-primary"></i>
-          <h2 class="card-title text-primary">{% trans 'No articles' %}</h2>
-          <p>{% trans 'Published news articles will appear here' %}</p>
-        </main>
-      </article>
+    <li class="col-span-full">
+      <div class="container-prose">
+        <h2>{% trans 'No results' %}</h2>
+        <p>{% trans "We couldn't find any results." %}</p>
+      </div>
     </li>
     {% endfor %}
   </ol>
