--- a/tcn/ui/templates/tcn/categories/index.html
+++ b/tcn/ui/templates/tcn/categories/index.html
@@ -21,10 +21,32 @@
     {{ index.description|richtext }}
   </div>
 
-  <ol class="grid grid-cols-12 gap-4">
+  <ol class="menu size-full gap-4 lg:menu-horizontal lg:grid lg:grid-cols-12">
     {% for category in index.get_children.specific %}
-    <li class="col-span-12 md:col-span-6 lg:col-span-4 2xl:col-span-3">
-      {% include 'tcn/components/category.html' %}
+    <li class="p-4 bg-base-200 rounded-box lg:col-span-6">
+      <a href="{% pageurl category %}" class="font-bold">
+        {{ category.title }}
+      </a>
+      <ul>
+        {% for art in category.get_ordered_children.live.specific|slice:':3' %}
+        <li>
+          <a href="{% url 'tcn:redirect' art.link.slug %}">
+            {% if art.is_breaking %}
+            <span
+              class="tooltip flex tooltip-error"
+              data-tip="{% trans 'Breaking' %}"
+            >
+              <span class="inline-grid *:[grid-area:1/1]">
+                <span class="sr-only">{% trans 'Breaking' %}</span>
+                <span class="status status-xl status-error animate-ping"></span>
+                <span class="status status-xl status-error"></span>
+              </span>
+            </span>
+            {% endif %} {{ art.title }}
+          </a>
+        </li>
+        {% endfor %}
+      </ul>
     </li>
     {% endfor %}
   </ol>
