--- a/tcn/ui/templates/tcn/components/article.html
+++ b/tcn/ui/templates/tcn/components/article.html
@@ -4,7 +4,7 @@
   class="group col-span-12 row-span-12 md:col-span-6 md:row-span-3 first:md:col-span-6 first:md:row-span-6 lg:col-span-4 xl:col-span-3"
 >
   <article
-    class="card border border-base-300 overflow-hidden image-full relative bg-base-300 hover:bg-base-200 card-sm md:card-md xl:card-lg 2xl:card-xl size-full shadow-sm group-first:flex-col lg:flex-col"
+    class="card border border-base-300 overflow-hidden image-full relative bg-base-100 hover:bg-base-200 card-sm md:card-md xl:card-lg 2xl:card-xl size-full group-first:flex-col lg:flex-col"
   >
     <a
       href="{% url 'tcn:redirect' article.link.slug %}"
@@ -13,7 +13,7 @@
       <span class="sr-only">{% trans 'Read' %}</span>
     </a>
 
-    <figure class="skeleton overflow-clip">
+    <figure class="rounded-box overflow-clip">
       {% image article.image fill-1920x1080 %}
     </figure>
 
