update article component

--- a/tcn/ui/templates/tcn/components/article-li.html
+++ b/tcn/ui/templates/tcn/components/article-li.html
@@ -12,7 +12,7 @@
     </figure>
   </div>
   <div class="flex flex-col gap-1 md:gap-2 lg:gap-4">
-    <h2 class="text-xl text-primary font-bold lg:text-2xl">
+    <h2 class="text-primary font-bold md:text-xl lg:text-2xl">
       {{ article.title }}
     </h2>
     <p class="hidden md:block">{{ article.headline }}</p>
