Refactor footer implementation across templates
- Updated the footer block in `base.html` files for blog, careers, and docs templates to use `{{ home.specific.footer }}` instead of including a separate footer component.
- Modified the footer block in the `tcn/base.html` template to utilize `{{ home.footer }}`.
- Introduced a new `footer.html` template in `tcn/blocks` to define the footer structure and content.
- Enhanced the `get_site_root` template tag to ensure it returns the localized root page of the site correctly.

--- a/tcn/ui/templates/blog/base.html
+++ b/tcn/ui/templates/blog/base.html
@@ -109,7 +109,7 @@
 {% endblock %}
 
 <!---->
-{% block footer %}{% include 'tcn/components/footer.html' %}{% endblock %}
+{% block footer %}{{ home.specific.footer }}{% endblock %}
 
 <!---->
 {% block drawer_branding %}
