--- a/tcn/ui/templates/tcn/base.html
+++ b/tcn/ui/templates/tcn/base.html
@@ -306,11 +306,7 @@
                 {% endblock %}
 
                 <!---->
-                {% block footer %}
-                <!---->
-                {% include 'tcn/components/footer.html' %}
-                <!---->
-                {% endblock %}
+                {% block footer %}{{ home.footer }}{% endblock %}
               </section>
               {% endblock %}
             </section>
