--- a/tcn/ui/templates/careers/base.html
+++ b/tcn/ui/templates/careers/base.html
@@ -109,7 +109,7 @@
 {% endblock %}
 
 <!---->
-{% block footer %}{% include 'tcn/components/footer.html' %}{% endblock %}
+{% block footer %}{{ home.specific.footer }}{% endblock %}
 
 <!---->
 {% block drawer_branding %}
