--- a/tcn/ui/templates/docs/base.html
+++ b/tcn/ui/templates/docs/base.html
@@ -115,7 +115,7 @@
 {% endblock %}
 
 <!---->
-{% block footer %}{% include 'tcn/components/footer.html' %}{% endblock %}
+{% block footer %}{{ home.specific.footer }}{% endblock %}
 
 <!---->
 {% block drawer_branding %}
