--- a/tcn/ui/templates/tcn/form.html
+++ b/tcn/ui/templates/tcn/form.html
@@ -1,7 +1,7 @@
 {% extends 'tcn/base.html' %}{% load i18n %}
 
 <!---->
-{% block title %}{{ block.super }} | {{ contact.title }}{% endblock %}
+{% block title %}{{ block.super }} | {{ page.title }}{% endblock %}
 
 <!---->
 {% block languages %}
@@ -16,8 +16,8 @@
   {% block message %}{% endblock %}
 
   <div class="container-prose">
-    <h1>{{ contact.title }}</h1>
-    {{ contact.content }}
+    <h1>{{ page.title }}</h1>
+    {{ page.content }}
   </div>
 
   {% block form %}
