--- a/tcn/ui/templates/tcn/form_landing.html
+++ b/tcn/ui/templates/tcn/form_landing.html
@@ -1,4 +1,4 @@
-{% extends 'tcn/contact.html' %}{% load i18n wagtailcore_tags %}
+{% extends 'tcn/form.html' %}{% load i18n wagtailcore_tags %}
 
 <!---->
 {% block message %}
@@ -13,7 +13,7 @@
     </span>
   </div>
 
-  {{ contact.message|richtext }}
+  {{ page.message|richtext }}
 </div>
 {% endblock %}
 
