--- a/tcn/ui/templates/tcn/page.html
+++ b/tcn/ui/templates/tcn/page.html
@@ -1,7 +1,7 @@
 {% extends 'tcn/base.html' %}{% load i18n %}
 
 <!---->
-{% block title %}{{ block.super }} | {{ about.title }}{% endblock %}
+{% block title %}{{ block.super }} | {{ page.title }}{% endblock %}
 
 <!---->
 {% block languages %}
@@ -13,7 +13,7 @@
 <!---->
 {% block content %}
 <div class="container-prose">
-  <h1>{{ about.title }}</h1>
-  {{ about.content }}
+  <h1>{{ page.title }}</h1>
+  {{ page.content }}
 </div>
 {% endblock %}
