--- a/tcn/ui/templates/registration/base.html
+++ b/tcn/ui/templates/registration/base.html
@@ -32,7 +32,7 @@
 
             <div
               class="tooltip tooltip-right rtl:tooltip-left tooltip-primary md:hidden"
-              data-tip="{% trans 'The Certain News' %}"
+              data-tip="{{ home.title }}"
             >
               <h1 class="relative">
                 <a
@@ -47,7 +47,7 @@
                       class="-rotate-45 lg:size-8 2xl:size-10"
                     ></i>
                   </div>
-                  <span class="sr-only">{% trans 'The Certain News' %}</span>
+                  <span class="sr-only">{{ home.title }}</span>
                 </a>
               </h1>
             </div>
