--- a/tcn/ui/templates/registration/logged_out.html
+++ b/tcn/ui/templates/registration/logged_out.html
@@ -1,4 +1,4 @@
-{% extends 'registration/base.html' %}{% load i18n wagtailcore_tags %}
+{% extends 'tcn/base.html' %}{% load i18n wagtailcore_tags %}
 
 <!---->
 {% block title %}{{ block.super }} | {% trans 'Logged out' %}{% endblock %}
@@ -12,7 +12,7 @@
     <div class="mx-auto p-6">
       <header
         class="tooltip tooltip-bottom tooltip-primary tooltip-open"
-        data-tip="{% trans 'The Certain News' %}"
+        data-tip="{{ home.title }}"
       >
         <h1 class="relative">
           <a
@@ -27,7 +27,7 @@
                 class="-rotate-45 lg:size-8 2xl:size-10"
               ></i>
             </div>
-            <span class="sr-only">{% trans 'The Certain News' %}</span>
+            <span class="sr-only">{{ home.title }}</span>
           </a>
         </h1>
       </header>
