--- a/tcn/ui/templates/rest_framework/api.html
+++ b/tcn/ui/templates/rest_framework/api.html
@@ -1,7 +1,7 @@
 {% extends 'rest_framework/base.html' %}{% load i18n %}
 
 <!---->
-{% block title %}{% trans 'The Certain News' %} | API | {{ name }}{% endblock %}
+{% block title %}{{ home.title }} | API | {{ name }}{% endblock %}
 
 <!---->
 {% block highlight_theme %}{{ block.super }}
