Refactor template includes for consistency
- Updated the formatting of the include statements in the list.html, saved.html, and search.html templates to place all parameters on a single line for improved readability and consistency.

--- a/tcn/ui/templates/tcn/articles/list.html
+++ b/tcn/ui/templates/tcn/articles/list.html
@@ -109,8 +109,7 @@
     </header>
 
     <main>
-      {% include 'tcn/components/form.html' with method='get' csrf=False
-      form=filter.form %}
+      {% include 'tcn/components/form.html' with method='get' csrf=False form=filter.form %}
     </main>
   </section>
 </dialog>
