--- a/tcn/ui/templates/tcn/articles/saved.html
+++ b/tcn/ui/templates/tcn/articles/saved.html
@@ -90,8 +90,7 @@
     </header>
 
     <main>
-      {% include 'tcn/components/form.html' with method='get' csrf=False
-      form=filter.form %}
+      {% include 'tcn/components/form.html' with method='get' csrf=False form=filter.form %}
     </main>
   </section>
 </dialog>
