--- a/tcn/ui/templates/tcn/search.html
+++ b/tcn/ui/templates/tcn/search.html
@@ -157,8 +157,7 @@
     </header>
 
     <main id="dialog">
-      {% include 'tcn/components/form.html' with method='get' csrf=False
-      form=filter.form %}
+      {% include 'tcn/components/form.html' with method='get' csrf=False form=filter.form %}
     </main>
   </section>
 </dialog>
