--- a/tcn/ui/static/tcn/css/app.css
+++ b/tcn/ui/static/tcn/css/app.css
@@ -61,6 +61,6 @@
   }
 
   .container-prose {
-    @apply prose w-full mx-auto prose-sm prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-img:rounded-box prose-img:w-full;
+    @apply prose w-full mx-auto prose-sm prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-img:rounded-box prose-img:w-full prose-p:text-primary prose-p:opacity-90 prose-li:text-primary prose-li:opacity-90 prose-a:link prose-a:link-hover prose-a:link-info prose-a:font-semibold;
   }
 }
