--- a/tcn/ui/templates/tcn/components/article-2.html
+++ b/tcn/ui/templates/tcn/components/article-2.html
@@ -1,7 +1,7 @@
 {% load i18n wagtailcore_tags wagtailimages_tags %}
 
 <li
-  class="col-span-12 row-span-12 lg:first:col-span-3 lg:nth-[3]:col-span-3 lg:nth-[2]:col-span-6 lg:nth-[2]:row-span-6 xl:nth-[2]:col-span-6 xl:nth-[2]:row-span-4 md:col-span-6 md:row-span-6 lg:col-span-4 lg:row-span-4 2xl:col-span-3 2xl:row-span-3"
+  class="col-span-12 lg:first:col-span-3 lg:nth-[3]:col-span-3 lg:nth-[2]:col-span-6 lg:nth-[2]:row-span-6 xl:nth-[2]:col-span-6 xl:nth-[2]:row-span-4 md:col-span-6 md:row-span-6 lg:col-span-4 lg:row-span-4 2xl:col-span-3 2xl:row-span-3"
 >
   <article
     class="relative card bg-base-100 size-full border border-base-300 hover:bg-base-200 card-sm md:card-md xl:card-lg 2xl:card-xl"
