--- a/tcn/ui/templates/tcn/components/article.html
+++ b/tcn/ui/templates/tcn/components/article.html
@@ -1,7 +1,7 @@
 {% load i18n wagtailcore_tags wagtailimages_tags %}
 
 <li
-  class="group col-span-12 row-span-12 md:col-span-6 md:row-span-3 first:md:col-span-6 first:md:row-span-6 lg:col-span-4 xl:col-span-3"
+  class="group col-span-12 md:col-span-6 md:row-span-3 first:md:col-span-6 first:md:row-span-6 lg:col-span-4 xl:col-span-3"
 >
   <article
     class="card border border-base-300 overflow-hidden image-full relative bg-base-100 hover:bg-base-200 card-sm md:card-md xl:card-lg 2xl:card-xl size-full group-first:flex-col lg:flex-col"
