--- a/tcn/ui/templates/tcn/index.html
+++ b/tcn/ui/templates/tcn/index.html
@@ -68,10 +68,10 @@
     </div>
   </section>
 
-  <section title="{% trans 'Trending' %}">
+  <section title="{% trans 'Most viewed' %}">
     {% if trending_news %}
     <div class="container-prose">
-      <h1>{% trans 'Trending now' %}</h1>
+      <h1>{% trans 'Most viewed' %}</h1>
     </div>
 
     <ol class="list grid grid-cols-1 md:grid-cols-2 gap-4">
