--- a/tcn/ui/templates/tcn/categories/index.html
+++ b/tcn/ui/templates/tcn/categories/index.html
@@ -25,7 +25,9 @@
     class="menu menu-xs size-full gap-4 sm:menu-sm md:menu-md lg:menu-horizontal lg:grid lg:grid-cols-12"
   >
     {% for category in index.get_children.specific %}
-    <li class="p-1 bg-base-200 rounded-box md:p-2 lg:p-4 lg:col-span-6">
+    <li
+      class="p-1 border border-base-300 rounded-box md:p-2 lg:p-4 lg:col-span-6"
+    >
       <a href="{% pageurl category %}" class="font-bold">
         {{ category.title }}
       </a>
